--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "format:fix": "prettier . --write"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "i18next": "^24.2.1",
     "i18next-browser-languagedetector": "^8.0.2",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.4.0"
+    "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
