feat: add files for docker, nginx conf for docker; T: 21-08-2025 22:39

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,5 @@
 VITE_EMAILUS_SERVICE_ID = your_service_id
 VITE_EMAILUS_TEMPLATE_ID = your_template_id
 VITE_EMAILUS_PUBLIC_KEY = your_public_key
+VITE_PORT=0000
+VITE_PORT_HOST=0000
