--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Deploy to Docker Server
+
+# Имя конкретного запуска. Используем сообщение коммита или "Manual run", если его нет.
 run-name: "🚀 Deploy: ${{ github.event.head_commit.message || 'Manual run' }}"
 
+# Триггер — запускать workflow при каждом пуше в ветку main
 on:
   push:
     branches:
@@ -8,42 +11,35 @@ on:
 
 jobs:
   deploy:
+    # GitHub Actions будет выполнять всё на виртуальной Ubuntu
     runs-on: ubuntu-latest
 
     steps:
       # 1️⃣ Клонируем код из репозитория
       - name: Checkout code
         uses: actions/checkout@v4
+        # Этот шаг загружает содержимое текущего репозитория
+        # (commit, который вызвал workflow) в рабочую директорию GitHub runner
 
-      # 2️⃣ Запускаем ssh-agent и добавляем ключ с паролем
+      # 2️⃣ Запускаем ssh-agent и добавляем приватный ключ
       - name: Start SSH agent and add private key
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-          passphrase: ${{ secrets.DEPLOY_KEY_PASSPHRASE }}
+        # Здесь GitHub Actions создаёт временный ssh-agent
+        # и добавляет в него приватный ключ из секрета DEPLOY_KEY
+        # Теперь все последующие SSH-команды могут использовать этот ключ для авторизации на сервере
 
-      # 3️⃣ Копируем код на сервер
-      - name: Copy code to server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          source: "."
-          target: ${{ secrets.SERVER_PATH }}
-          overwrite: true
-
-      # 4️⃣ Выполняем команды на сервере: пересобираем Docker
-      - name: SSH to server and rebuild Docker
+      # 3️⃣ Подключаемся к серверу и выполняем команду деплоя
+      - name: SSH to server and run deploy script
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          script: |
-            cd ${{ secrets.SERVER_PATH }}
-            echo "Stopping containers..."
-            docker compose down || true
-            echo "Rebuilding images..."
-            docker compose build --no-cache
-            echo "Starting containers..."
-            docker compose up -d
-            echo "✅ Deploy complete!"
+          host: ${{ secrets.SERVER_HOST }}       # IP-адрес или домен сервера
+          username: ${{ secrets.SERVER_USER }}   # SSH-пользователь на сервере
+          script: |                              # Многострочный блок с командами
+            echo "Triggering secure deploy..."
+            ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}
+        # Этот шаг подключается к серверу через SSH и выполняет указанные команды.
+        # Параметр "-o StrictHostKeyChecking=no" отключает проверку "доверенного хоста",
+        # чтобы GitHub Actions не запрашивал подтверждение при первом подключении.
+        # Обычно здесь запускают деплой-скрипт (например, обновление Docker, git pull, npm build и т.д.)
