--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
+# Имя workflow, которое будет отображаться в GitHub Action
 name: Deploy to Docker Server
 run-name: "🚀 Deploy: ${{ github.event.head_commit.message || 'Manual run' }}"
 
+# Триггер — запускать workflow при каждом пуше в ветку main
 on:
   push:
     branches:
@@ -8,9 +10,11 @@ on:
 
 jobs:
   deploy:
+    # GitHub Actions будет выполнять всё на виртуальной Ubuntu
     runs-on: ubuntu-latest
 
     steps:
+      # 🔹 Единственный шаг — подключаемся по SSH к серверу
       - name: Trigger SSH connection to start deploy
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -19,3 +23,4 @@ jobs:
           key: ${{ secrets.DEPLOY_KEY }}
           script: |
             echo "Connecting to server... deploy should start automatically"
+          # После этого сервер выполнит скрипт.sh
